--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -10,5 +10,39 @@
 </ion-header>
 
 <ion-content padding>
-  <h1>GSCON</h1>
+  <ion-grid>
+    <ion-row>
+      <!--<div class="temp-logo-container">
+        <h1 class="temp-logo">GSCON</h1>
+      </div>-->
+      <ion-title text-center color="#ffffff">
+        <h2>GSCON</h2>
+      </ion-title>  
+    </ion-row>    
+    <ion-row>
+      <ion-col>
+        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
