--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,6 +6,9 @@
 -->
 
 <ion-content class="login-background" padding>
+  <div class="temp-logo-container">
+      <img src="assets/images/logo.png" class="temp-logo">
+  </div>
   <!--<div class="temp-logo-container">
     <h1 class="temp-logo">GSCON</h1>
     <h3 class="temp-logo">Sistemas Integrados</h3>
