--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,48 +1,72 @@
-<ion-header>
-  <ion-navbar color="dark">
+<!--<ion-header>
+  <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Home
+      
     </ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content padding>
-  <ion-grid>
-    <ion-row>
-      <!--<div class="temp-logo-container">
-        <h1 class="temp-logo">GSCON</h1>
-      </div>-->
-      <ion-title text-center color="#ffffff">
-        <h2>GSCON</h2>
-      </ion-title>  
-    </ion-row>    
-    <ion-row>
-      <ion-col>
-        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
-      </ion-col>
-      <ion-col>
-        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
-      </ion-col>
-      <ion-col>
-        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
-      </ion-col>
-      <ion-col>
-        <ion-icon name="ios-mail-outline"  item-right primary color="light"></ion-icon>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-navbar>
+        <button ion-button menuToggle>
+          <ion-icon name="ios-menu" class="icon-header-home"></ion-icon>
+        </button>
+        <ion-buttons end>
+          <button ion-button right class="transparent-background-home" >
+            <ion-icon name="ios-notifications-outline" class="icon-header-home" primary></ion-icon>
+          </button>
+      </ion-buttons>
+
+    </ion-navbar>
+    <ion-grid class="div-grid">
+      <ion-row>
+          <img src="assets/images/logo2.png" class="logo">
+      </ion-row>
+      <ion-row>
+        <ion-col col-6>
+          <button class="transparent-background-home">
+            <ion-icon name="ios-calendar-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+          </button>
+          <ion-label>ASSEMBLEIAS</ion-label>
+        </ion-col>
+        <ion-col col-6>
+            <button class="transparent-background-home">
+              <ion-icon name="ios-flag-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+            </button>
+            <ion-label>LANCES</ion-label>
+          </ion-col>
+      </ion-row>  
+      <ion-row>
+          <ion-col col-6>
+              <button class="transparent-background-home">
+              <ion-icon name="ios-notifications-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+            </button>
+            <ion-label>AVISOS</ion-label>
+          </ion-col>
+          <ion-col col-6>
+              <button class="transparent-background-home">
+                <ion-icon name="ios-pie-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+              </button>
+              <ion-label>FASES DE CONTEMPLAÇÃO</ion-label>
+            </ion-col>
+        </ion-row> 
+        <ion-row>
+            <ion-col col-6>
+                <button class="transparent-background-home">
+                <ion-icon name="logo-usd" class="ion-icon-home" item-center primary color="light"></ion-icon>
+              </button>
+              <ion-label>BOLETOS</ion-label>
+            </ion-col>
+            <ion-col col-6>
+                <button class="transparent-background-home">
+                  <ion-icon name="ios-log-out-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+                </button>
+                <ion-label>SAIR</ion-label>
+              </ion-col>
+          </ion-row> 
+    </ion-grid>
 
 </ion-content>
