--- a/src/pages/assemblies/assemblies.html
+++ b/src/pages/assemblies/assemblies.html
@@ -1,18 +1,83 @@
-<!--
-  Generated template for the AssembliesPage page.
+<ion-content>
+  <ion-navbar color="def">
+      <button ion-button menuToggle>
+        <ion-icon name="ios-menu" class="icon-header-assemblies"></ion-icon>
+      </button>
+      <ion-label class="listTitle">Calendário de Assembleias</ion-label>
+      <ion-buttons end>
+        <button ion-button right class="transparent-background-assemblies">
+          <ion-icon name="ios-notifications" class="icon-header-assemblies" color="light" primary></ion-icon>
+        </button>
+      </ion-buttons>
+    </ion-navbar>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+    <ion-grid class="calendar-background">
+        <ion-row class="calendar-background">
+            <ion-item class="calendar-background">
+                <ion-label class="listTitle" item-left>2017</ion-label>
+                <ion-icon name="ios-arrow-up" class="transparent-background-assemblies" color="light" item-right></ion-icon>
+                <ion-icon name="ios-arrow-down" class="transparent-background-assemblies" color="light" item-right></ion-icon>
+              </ion-item>
+        </ion-row>
+      <ion-row style="margin-top: 10px;">
+        <ion-col>
+          <ion-label class="listTitle">jan</ion-label>
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">fev</ion-label>
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">mar</ion-label>
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">abr</ion-label>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+            <ion-label class="listTitle">mai</ion-label>
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">jun</ion-label> 
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">jul</ion-label>
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">ago</ion-label>  
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+            <ion-label class="listTitle"><span class="active">set</span></ion-label>  
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">out</ion-label>  
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">nov</ion-label>  
+        </ion-col>
+        <ion-col>
+            <ion-label class="listTitle">dez</ion-label>  
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-grid padding>
+      <ion-row>
+          <ion-label text-left color="light">Assembléia 146</ion-label>
+      </ion-row>  
+      <ion-row>
+          <ion-col col-5>
+              <ion-label text-left color="light">Lances</ion-label>
+          </ion-col>
+          <ion-col col-2>
+              <ion-label text-left color="light">Bem</ion-label>
+          </ion-col>
+          <ion-col col-5>
+              <ion-label text-left color="light">Prazo (Meses)</ion-label>
+          </ion-col>
+      </ion-row>  
+    </ion-grid>
 
-  <ion-navbar>
-    <ion-title>assemblies</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+    
 </ion-content>
