--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,8 @@
           <ion-icon name="ios-menu" class="icon-header-home"></ion-icon>
         </button>
         <ion-buttons end>
-          <button ion-button right class="transparent-background-home" >
-            <ion-icon name="ios-notifications-outline" class="icon-header-home" primary></ion-icon>
+          <button ion-button right class="transparent-background-home">
+            <ion-icon name="ios-notifications" class="icon-header-home" primary></ion-icon>
           </button>
       </ion-buttons>
 
@@ -16,14 +16,14 @@
       </ion-row>
       <ion-row>
         <ion-col col-6>
-          <button class="transparent-background-home">
-            <ion-icon name="ios-calendar-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+          <button class="transparent-background-home" (click)="goToAssembliesPage()">
+            <ion-icon name="md-calendar" class="ion-icon-home" item-center primary color="light"></ion-icon>
           </button>
           <ion-label>ASSEMBLEIAS</ion-label>
         </ion-col>
         <ion-col col-6>
             <button class="transparent-background-home">
-              <ion-icon name="ios-flag-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+              <ion-icon name="ios-flag" class="ion-icon-home" item-center primary color="light"></ion-icon>
             </button>
             <ion-label>LANCES</ion-label>
           </ion-col>
@@ -51,7 +51,7 @@
             </ion-col>
             <ion-col col-6>
                 <button class="transparent-background-home">
-                  <ion-icon name="ios-log-out-outline" class="ion-icon-home" item-center primary color="light"></ion-icon>
+                  <ion-icon name="ios-log-out" class="ion-icon-home" item-center primary color="light"></ion-icon>
                 </button>
                 <ion-label>SAIR</ion-label>
               </ion-col>
