starting boleto page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,7 +44,7 @@
         </ion-row> 
         <ion-row>
             <ion-col col-6>
-                <button class="transparent-background-home">
+                <button class="transparent-background-home" (click)="goToBoletoPage()">
                 <ion-icon name="logo-usd" class="ion-icon-home" item-center primary color="light"></ion-icon>
               </button>
               <ion-label>BOLETOS</ion-label>
