contemplation page finished

--- a/src/pages/bids/bids.html
+++ b/src/pages/bids/bids.html
@@ -11,15 +11,16 @@
         </ion-buttons>
       </ion-navbar>
       <img src="assets/images/bid-house.jpg" class="house">
+      <ion-title text-center color="light" class="bid-imovel" padding>IMÓVEL</ion-title>
       <ion-label text-center color="dark" style="font-size: 20px">$ 600.000,00</ion-label>
       <ion-grid>
         <ion-row>
           <ion-col>
-            <ion-label text-center color="dark" style="font-size: 17px">Lance Mínimo</ion-label>
+            <ion-label text-center color="dark" style="font-size: 17px">Lance Mínimo %</ion-label>
             <ion-label text-center color="dark" style="font-size: 17px">6</ion-label>
           </ion-col>  
           <ion-col>
-            <ion-label text-center color="dark" style="font-size: 17px">Lance Máximo</ion-label>
+            <ion-label text-center color="dark" style="font-size: 17px">Lance Máximo %</ion-label>
             <ion-label text-center color="dark" style="font-size: 17px">30</ion-label>
           </ion-col>  
         </ion-row>
