--- a/src/pages/boleto/boleto.html
+++ b/src/pages/boleto/boleto.html
@@ -19,15 +19,54 @@
       <ion-row>
         <ion-col col-5>
           <ion-label text-right>Vencimento</ion-label>
-          <ion-label text-right>07/04/2017</ion-label>
+          <ion-label text-right color="soft">
+            <ion-icon name="ios-timer-outline"></ion-icon>
+            07/04/2017
+          </ion-label>
+          <ion-label style="margin-left: 41px">|</ion-label>
         </ion-col>
         <ion-col col-3>
-          <ion-label>Boleto</ion-label>
+          <ion-label text-center>Boleto</ion-label>
+          <ion-label text-center color="soft">0125095</ion-label>
+          <ion-label text-center color="soft">$ 200,00</ion-label>
         </ion-col>
         <ion-col col-4>
-          <ion-label>Status</ion-label>
+          <ion-label text-left>Status</ion-label>
+          <ion-label text-left color="soft">Pago</ion-label>
+          <ion-label text-left color="soft">
+              <ion-icon name="md-calendar"></ion-icon>
+              06/04/2017
+            </ion-label>
         </ion-col>
       </ion-row>
+      <ion-row>
+          <ion-col col-5>
+            <ion-label text-right color="soft">
+              <ion-icon name="ios-timer-outline"></ion-icon>
+              07/04/2017
+            </ion-label>
+            <ion-label style="margin-left: 41px">|</ion-label>
+          </ion-col>
+          <ion-col col-3>
+            <ion-label text-center color="soft">0125095</ion-label>
+            <ion-label text-center color="soft">$ 200,00</ion-label>
+          </ion-col>
+          <ion-col col-4>
+            <ion-label text-left color="soft">Pago</ion-label>
+            <ion-label text-left color="soft">
+                <ion-icon name="md-calendar"></ion-icon>
+                06/04/2017
+              </ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-9></ion-col>
+          <ion-col col-3>
+            <ion-fab item-right>
+              <button ion-fab item-right color="defblue">+</button>
+            </ion-fab>
+          </ion-col>
+        </ion-row>
     </ion-grid>
-
+    
 </ion-content>
