--- a/src/pages/assemblies/assemblies.html
+++ b/src/pages/assemblies/assemblies.html
@@ -15,68 +15,65 @@
         <ion-row>
             <ion-item>
                 <ion-label class="listTitle" item-left>2017</ion-label>
-                <ion-icon name="ios-arrow-up" class="transparent-background-assemblies" color="light" item-right></ion-icon>
-                <ion-icon name="ios-arrow-down" class="transparent-background-assemblies" color="light" item-right></ion-icon>
+                <ion-icon name="ios-arrow-up" class="transparent-background-assemblies" color="light" item-right margin-right></ion-icon>
+                <ion-icon name="ios-arrow-down" class="transparent-background-assemblies" color="light" item-right margin-right></ion-icon>
               </ion-item>
         </ion-row>
       <ion-row style="margin-top: 10px;">
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
           <ion-label class="listTitle">jan</ion-label>
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">fev</ion-label>
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">mar</ion-label>
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">abr</ion-label>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">mai</ion-label>
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">jun</ion-label> 
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">jul</ion-label>
         </ion-col>
         
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <div class="focus-mont"> 
               <ion-label class="listTitle">ago</ion-label>  
             </div>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col>
+            <ion-col class="ion-col-assemblie active">    
             <ion-label class="listTitle">set</ion-label>  
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">out</ion-label>  
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">nov</ion-label>  
         </ion-col>
-        <ion-col>
+        <ion-col class="ion-col-assemblie">
             <ion-label class="listTitle">dez</ion-label>  
         </ion-col>
       </ion-row>
     </ion-grid>
-    <ion-grid class="ion-grid-assemblies" padding>
-      
-        <ion-row>
-            <ion-label text-left color="dark">Assembléia 146</ion-label>
-        </ion-row>  
+    <ion-label text-left color="dark" padding-left><strong>Assembléia 146</strong></ion-label>
+    <ion-grid class="ion-grid-assemblies" padding-left>
         <ion-row>
             <ion-col col-3>
-                  <ion-label text-left color="dark">Lances</ion-label>
-                  <ion-label text-left color="soft">Embutido</ion-label>
-                  <ion-label text-left color="soft">Fixo</ion-label>
-                  <ion-label text-left color="soft">% Mínimo</ion-label>
-                  <ion-label text-left color="soft">% Máximo</ion-label>
+                    <ion-label text-left color="dark">Lances</ion-label>
+                    <ion-label text-left color="soft">Embutido</ion-label>
+                    <ion-label text-left color="soft">Fixo</ion-label>
+                    <ion-label text-left color="soft">% Mínimo</ion-label>
+                    <ion-label text-left color="soft">% Máximo</ion-label>
             </ion-col>
             <ion-col col-2>
                 <ion-label text-left color="light">1</ion-label>
@@ -84,7 +81,7 @@
                 <ion-label text-left color="soft">30%</ion-label>
                 <ion-label text-left color="soft">6%</ion-label>
                 <ion-label text-left color="soft">10%</ion-label>
-              </ion-col> 
+                </ion-col> 
             <ion-col col-3>
                 <ion-label text-left color="dark">Bem</ion-label>
                 <ion-label text-left color="soft">Imóvel</ion-label>
@@ -98,16 +95,16 @@
             <ion-label text-left color="dark">Datas:</ion-label>
         </ion-row>
         <ion-row>
-          <ion-col>
-              <ion-label text-center color="soft">Vencimento parcela</ion-label>
-              <ion-label text-center color="soft">Assembléia</ion-label>
-              <ion-label text-center color="soft">Loteria Federal</ion-label>
-          </ion-col>
-          <ion-col>
-              <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>02/05/2018</ion-label>
-              <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>01/06/2016</ion-label>
-              <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>03/05/2017</ion-label>
-          </ion-col>
-        </ion-row>
+            <ion-col>
+                <ion-label text-left color="soft">Vencimento parcela</ion-label>
+                <ion-label text-left color="soft">Assembléia</ion-label>
+                <ion-label text-left color="soft">Loteria Federal</ion-label>
+            </ion-col>
+            <ion-col>
+                <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>02/05/2018</ion-label>
+                <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>01/06/2016</ion-label>
+                <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>03/05/2017</ion-label>
+            </ion-col>
+        </ion-row>  
     </ion-grid>
 </ion-content>
