notification icon finished

--- a/src/pages/assemblies/assemblies.html
+++ b/src/pages/assemblies/assemblies.html
@@ -5,7 +5,7 @@
       </button>
       <ion-label class="listTitle">Calendário de Assembleias</ion-label>
       <ion-buttons end>
-        <button ion-button right class="transparent-background-assemblies">
+        <button ion-button right class="transparent-background-assemblies" (click)="goToNotificationPage()">
           <ion-icon name="ios-notifications" class="icon-header-assemblies" color="light" primary></ion-icon>
         </button>
       </ion-buttons>
