--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,26 +13,23 @@
     <h1 class="logo1">GSCON</h1>
     <h3 class="logo2">Sistemas Integrados</h3>
   </div>
-  
-    <!--<ion-title text-center class="logo1">GSCON</ion-title>-->
-  
-    
+  <!--<ion-title text-center class="logo1">GSCON</ion-title>-->
   <div class="div-login">
     <ion-grid class="grid-login" padding>
       <ion-item class="transparent-background">
-        <ion-label color="light" class="login-text"><strong>Grupo*</strong></ion-label>
+        <ion-label color="dark" class="login-text"><strong>Grupo*</strong></ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
       <ion-item class="transparent-background">
-        <ion-label color="light" class="login-text"><strong>Cota*</strong></ion-label>
+        <ion-label color="dark" class="login-text"><strong>Cota*</strong></ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
       <ion-item class="transparent-background">
-        <ion-label color="light" class="login-text"><strong>Versão*</strong></ion-label>
+        <ion-label color="dark" class="login-text"><strong>Versão*</strong></ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
       <ion-item class="transparent-background">
-        <ion-label color="light" class="login-text"><strong>Password*</strong></ion-label>
+        <ion-label color="dark" class="login-text"><strong>Password*</strong></ion-label>
         <ion-input type="password"></ion-input>
       </ion-item>
       <button ion-button class="button-enter" (click)="login()">Entrar</button>
