boleto alert dialog

--- a/src/pages/boleto/boleto.html
+++ b/src/pages/boleto/boleto.html
@@ -63,7 +63,7 @@
           <ion-col col-9></ion-col>
           <ion-col col-3>
             <ion-fab item-right>
-              <button ion-fab item-right color="defblue" strong large>+</button>
+              <button ion-fab item-right color="defblue" (click)="presentConfirm()" strong large>+</button>
             </ion-fab>
           </ion-col>
         </ion-row>
