--- a/src/pages/assemblies/assemblies.html
+++ b/src/pages/assemblies/assemblies.html
@@ -12,55 +12,53 @@
     </ion-navbar>
 
     <ion-grid class="ion-grid-assemblie">
-        <ion-row>
-            <ion-item>
-                <ion-label class="listTitle" item-left>2017</ion-label>
-                <ion-icon name="ios-arrow-up" class="transparent-background-assemblies" color="light" item-right margin-right></ion-icon>
-                <ion-icon name="ios-arrow-down" class="transparent-background-assemblies" color="light" item-right margin-right></ion-icon>
-              </ion-item>
-        </ion-row>
+      <ion-row>
+        <ion-item>
+            <ion-label class="listTitle" item-left>2017</ion-label>
+            <ion-icon name="ios-arrow-up" class="transparent-background-assemblies" color="light" item-right margin-right></ion-icon>
+            <ion-icon name="ios-arrow-down" class="transparent-background-assemblies" color="light" item-right margin-right></ion-icon>
+            </ion-item>
+    </ion-row>
       <ion-row style="margin-top: 10px;">
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 0 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
           <ion-label class="listTitle">jan</ion-label>
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 1 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">fev</ion-label>
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 2 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">mar</ion-label>
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 3 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">abr</ion-label>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 4 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">mai</ion-label>
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 5 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">jun</ion-label> 
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 6 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">jul</ion-label>
         </ion-col>
         
-        <ion-col class="ion-col-assemblie">
-            <div class="focus-mont"> 
-              <ion-label class="listTitle">ago</ion-label>  
-            </div>
+        <ion-col [ngClass]="actualDate == 7 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
+            <ion-label class="listTitle">ago</ion-label>  
         </ion-col>
       </ion-row>
       <ion-row>
-            <ion-col class="ion-col-assemblie active">    
+            <ion-col [ngClass]="actualDate == 8 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">set</ion-label>  
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 9 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">out</ion-label>  
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 10 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">nov</ion-label>  
         </ion-col>
-        <ion-col class="ion-col-assemblie">
+        <ion-col [ngClass]="actualDate == 11 ? 'ion-col-assemblie active' : 'ion-col-assemblie'">
             <ion-label class="listTitle">dez</ion-label>  
         </ion-col>
       </ion-row>
@@ -91,8 +89,8 @@
                 <ion-label text-center color="soft">002</ion-label>
             </ion-col>
         </ion-row>
-        <ion-row>
-            <ion-label text-left color="dark">Datas:</ion-label>
+        <ion-row class="date-row">
+            <ion-label text-left  color="dark">Datas:</ion-label>
         </ion-row>
         <ion-row>
             <ion-col>
@@ -101,9 +99,9 @@
                 <ion-label text-left color="soft">Loteria Federal</ion-label>
             </ion-col>
             <ion-col>
-                <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>02/05/2018</ion-label>
-                <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>01/06/2016</ion-label>
-                <ion-label text-center color="soft"><ion-icon name="ios-calendar"></ion-icon>03/05/2017</ion-label>
+                <ion-label text-center color="soft" class="icon-date-assemblie"><ion-icon name="ios-calendar"></ion-icon>02/05/2018</ion-label>
+                <ion-label text-center color="soft" class="icon-date-assemblie"><ion-icon name="ios-calendar"></ion-icon>01/06/2016</ion-label>
+                <ion-label text-center color="soft" class="icon-date-assemblie"><ion-icon name="ios-calendar"></ion-icon>03/05/2017</ion-label>
             </ion-col>
         </ion-row>  
     </ion-grid>
